simpleble_c/peripheral.h

    /**
     * @brief
     *
     * @param handle
     * @return size_t
     */
    SIMPLEBLE_EXPORT size_t simpleble_peripheral_services_count(simpleble_peripheral_t handle);
    /**
     * @brief
     *
     * @param handle
     * @param index
     * @param services
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t simpleble_peripheral_services_get(simpleble_peripheral_t handle, size_t index,
                                                                       simpleble_service_t *services);
    /**
     * @brief
     *
     * @param handle
     * @return size_t
     */
    SIMPLEBLE_EXPORT size_t simpleble_peripheral_manufacturer_data_count(simpleble_peripheral_t handle);
    /**
     * @brief
     *
     * @param handle
     * @param index
     * @param manufacturer_data
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t simpleble_peripheral_manufacturer_data_get(
        simpleble_peripheral_t handle, size_t index, simpleble_manufacturer_data_t *manufacturer_data);
    /**
     * @brief
     *
     * @note The user is responsible for freeing the pointer returned in data.
     *
     * @param handle
     * @param service
     * @param characteristic
     * @param data
     * @param data_length
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t simpleble_peripheral_read(simpleble_peripheral_t handle, simpleble_uuid_t service,
                                                               simpleble_uuid_t characteristic, uint8_t **data,
                                                               size_t *data_length);
    /**
     * @brief
     *
     * @param handle
     * @param service
     * @param characteristic
     * @param data
     * @param data_length
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t simpleble_peripheral_write_request(simpleble_peripheral_t handle,
                                                                        simpleble_uuid_t service,
                                                                        simpleble_uuid_t characteristic,
                                                                        const uint8_t *data, size_t data_length);
    /**
     * @brief
     *
     * @param handle
     * @param service
     * @param characteristic
     * @param data
     * @param data_length
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t simpleble_peripheral_write_command(simpleble_peripheral_t handle,
                                                                        simpleble_uuid_t service,
                                                                        simpleble_uuid_t characteristic,
                                                                        const uint8_t *data, size_t data_length);
    /**
     * @brief
     *
     * @param handle
     * @param service
     * @param characteristic
     * @param callback
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t
    simpleble_peripheral_notify(simpleble_peripheral_t handle, simpleble_uuid_t service, simpleble_uuid_t characteristic,
                                void (*callback)(simpleble_uuid_t service, simpleble_uuid_t characteristic,
                                                 const uint8_t *data, size_t data_length, void *userdata),
                                void *userdata);
    /**
     * @brief
     *
     * @param handle
     * @param service
     * @param characteristic
     * @param callback
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t
    simpleble_peripheral_indicate(simpleble_peripheral_t handle, simpleble_uuid_t service, simpleble_uuid_t characteristic,
                                  void (*callback)(simpleble_uuid_t service, simpleble_uuid_t characteristic,
                                                   const uint8_t *data, size_t data_length, void *userdata),
                                  void *userdata);
    /**
     * @brief
     *
     * @param handle
     * @param service
     * @param characteristic
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t simpleble_peripheral_unsubscribe(simpleble_peripheral_t handle,
                                                                      simpleble_uuid_t service,
                                                                      simpleble_uuid_t characteristic);
    /**
     * @brief
     *
     * @param handle
     * @param service
     * @param characteristic
     * @param descriptor
     * @param data
     * @param data_length
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t simpleble_peripheral_read_descriptor(simpleble_peripheral_t handle,
                                                                          simpleble_uuid_t service,
                                                                          simpleble_uuid_t characteristic,
                                                                          simpleble_uuid_t descriptor, uint8_t **data,
                                                                          size_t *data_length);
    /**
     * @brief
     *
     * @param handle
     * @param callback
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t simpleble_peripheral_set_callback_on_connected(
        simpleble_peripheral_t handle, void (*callback)(simpleble_peripheral_t peripheral, void *userdata), void *userdata);
    /**
     * @brief
     *
     * @param handle
     * @param callback
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t simpleble_peripheral_set_callback_on_disconnected(
        simpleble_peripheral_t handle, void (*callback)(simpleble_peripheral_t peripheral, void *userdata), void *userdata);