simpleble_c/adapter.h

    /**
     * @brief
     *
     * @param handle
     * @param callback
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t simpleble_adapter_set_callback_on_scan_start(
        simpleble_adapter_t handle, void (*callback)(simpleble_adapter_t adapter, void *userdata), void *userdata);
    /**
     * @brief
     *
     * @param handle
     * @param callback
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t simpleble_adapter_set_callback_on_scan_stop(
        simpleble_adapter_t handle, void (*callback)(simpleble_adapter_t adapter, void *userdata), void *userdata);
    /**
     * @brief
     *
     * @param handle
     * @param callback
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t simpleble_adapter_set_callback_on_scan_updated(
        simpleble_adapter_t handle,
        void (*callback)(simpleble_adapter_t adapter, simpleble_peripheral_t peripheral, void *userdata), void *userdata);
    /**
     * @brief
     *
     * @param handle
     * @param callback
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t simpleble_adapter_set_callback_on_scan_found(
        simpleble_adapter_t handle,
        void (*callback)(simpleble_adapter_t adapter, simpleble_peripheral_t peripheral, void *userdata), void *userdata);