lib/generated/generated_bindings.dart


  /// @brief
  ///
  /// @param handle
  /// @return size_t
  int simpleble_peripheral_services_count(
    simpleble_peripheral_t handle,
  ) {
    return _simpleble_peripheral_services_count(
      handle,
    );
  }

  late final _simpleble_peripheral_services_countPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(simpleble_peripheral_t)>>(
          'simpleble_peripheral_services_count');
  late final _simpleble_peripheral_services_count =
      _simpleble_peripheral_services_countPtr
          .asFunction<int Function(simpleble_peripheral_t)>();

  /// @brief
  ///
  /// @param handle
  /// @param index
  /// @param services
  /// @return simpleble_err_t
  int simpleble_peripheral_services_get(
    simpleble_peripheral_t handle,
    int index,
    ffi.Pointer<simpleble_service_t> services,
  ) {
    return _simpleble_peripheral_services_get(
      handle,
      index,
      services,
    );
  }

  late final _simpleble_peripheral_services_getPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int32 Function(simpleble_peripheral_t, ffi.Size,
                  ffi.Pointer<simpleble_service_t>)>>(
      'simpleble_peripheral_services_get');
  late final _simpleble_peripheral_services_get =
      _simpleble_peripheral_services_getPtr.asFunction<
          int Function(
              simpleble_peripheral_t, int, ffi.Pointer<simpleble_service_t>)>();

  /// @brief
  ///
  /// @param handle
  /// @return size_t
  int simpleble_peripheral_manufacturer_data_count(
    simpleble_peripheral_t handle,
  ) {
    return _simpleble_peripheral_manufacturer_data_count(
      handle,
    );
  }

  late final _simpleble_peripheral_manufacturer_data_countPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(simpleble_peripheral_t)>>(
          'simpleble_peripheral_manufacturer_data_count');
  late final _simpleble_peripheral_manufacturer_data_count =
      _simpleble_peripheral_manufacturer_data_countPtr
          .asFunction<int Function(simpleble_peripheral_t)>();

  /// @brief
  ///
  /// @param handle
  /// @param index
  /// @param manufacturer_data
  /// @return simpleble_err_t
  int simpleble_peripheral_manufacturer_data_get(
    simpleble_peripheral_t handle,
    int index,
    ffi.Pointer<simpleble_manufacturer_data_t> manufacturer_data,
  ) {
    return _simpleble_peripheral_manufacturer_data_get(
      handle,
      index,
      manufacturer_data,
    );
  }

  late final _simpleble_peripheral_manufacturer_data_getPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int32 Function(simpleble_peripheral_t, ffi.Size,
                  ffi.Pointer<simpleble_manufacturer_data_t>)>>(
      'simpleble_peripheral_manufacturer_data_get');
  late final _simpleble_peripheral_manufacturer_data_get =
      _simpleble_peripheral_manufacturer_data_getPtr.asFunction<
          int Function(simpleble_peripheral_t, int,
              ffi.Pointer<simpleble_manufacturer_data_t>)>();

  /// @brief
  ///
  /// @note The user is responsible for freeing the pointer returned in data.
  ///
  /// @param handle
  /// @param service
  /// @param characteristic
  /// @param data
  /// @param data_length
  /// @return simpleble_err_t
  int simpleble_peripheral_read(
    simpleble_peripheral_t handle,
    simpleble_uuid_t service,
    simpleble_uuid_t characteristic,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> data,
    ffi.Pointer<ffi.Size> data_length,
  ) {
    return _simpleble_peripheral_read(
      handle,
      service,
      characteristic,
      data,
      data_length,
    );
  }

  late final _simpleble_peripheral_readPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              simpleble_peripheral_t,
              simpleble_uuid_t,
              simpleble_uuid_t,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
              ffi.Pointer<ffi.Size>)>>('simpleble_peripheral_read');
  late final _simpleble_peripheral_read =
      _simpleble_peripheral_readPtr.asFunction<
          int Function(
              simpleble_peripheral_t,
              simpleble_uuid_t,
              simpleble_uuid_t,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
              ffi.Pointer<ffi.Size>)>();

  /// @brief
  ///
  /// @param handle
  /// @param service
  /// @param characteristic
  /// @param data
  /// @param data_length
  /// @return simpleble_err_t
  int simpleble_peripheral_write_request(
    simpleble_peripheral_t handle,
    simpleble_uuid_t service,
    simpleble_uuid_t characteristic,
    ffi.Pointer<ffi.Uint8> data,
    int data_length,
  ) {
    return _simpleble_peripheral_write_request(
      handle,
      service,
      characteristic,
      data,
      data_length,
    );
  }

  late final _simpleble_peripheral_write_requestPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              simpleble_peripheral_t,
              simpleble_uuid_t,
              simpleble_uuid_t,
              ffi.Pointer<ffi.Uint8>,
              ffi.Size)>>('simpleble_peripheral_write_request');
  late final _simpleble_peripheral_write_request =
      _simpleble_peripheral_write_requestPtr.asFunction<
          int Function(simpleble_peripheral_t, simpleble_uuid_t,
              simpleble_uuid_t, ffi.Pointer<ffi.Uint8>, int)>();

  /// @brief
  ///
  /// @param handle
  /// @param service
  /// @param characteristic
  /// @param data
  /// @param data_length
  /// @return simpleble_err_t
  int simpleble_peripheral_write_command(
    simpleble_peripheral_t handle,
    simpleble_uuid_t service,
    simpleble_uuid_t characteristic,
    ffi.Pointer<ffi.Uint8> data,
    int data_length,
  ) {
    return _simpleble_peripheral_write_command(
      handle,
      service,
      characteristic,
      data,
      data_length,
    );
  }

  late final _simpleble_peripheral_write_commandPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              simpleble_peripheral_t,
              simpleble_uuid_t,
              simpleble_uuid_t,
              ffi.Pointer<ffi.Uint8>,
              ffi.Size)>>('simpleble_peripheral_write_command');
  late final _simpleble_peripheral_write_command =
      _simpleble_peripheral_write_commandPtr.asFunction<
          int Function(simpleble_peripheral_t, simpleble_uuid_t,
              simpleble_uuid_t, ffi.Pointer<ffi.Uint8>, int)>();

  /// @brief
  ///
  /// @param handle
  /// @param service
  /// @param characteristic
  /// @param callback
  /// @return simpleble_err_t
  int simpleble_peripheral_notify(
    simpleble_peripheral_t handle,
    simpleble_uuid_t service,
    simpleble_uuid_t characteristic,
    ffi.Pointer<
            ffi.NativeFunction<
                ffi.Void Function(
                    simpleble_uuid_t service,
                    simpleble_uuid_t characteristic,
                    ffi.Pointer<ffi.Uint8> data,
                    ffi.Size data_length,
                    ffi.Pointer<ffi.Void> userdata)>>
        callback,
    ffi.Pointer<ffi.Void> userdata,
  ) {
    return _simpleble_peripheral_notify(
      handle,
      service,
      characteristic,
      callback,
      userdata,
    );
  }

  late final _simpleble_peripheral_notifyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              simpleble_peripheral_t,
              simpleble_uuid_t,
              simpleble_uuid_t,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Void Function(
                          simpleble_uuid_t service,
                          simpleble_uuid_t characteristic,
                          ffi.Pointer<ffi.Uint8> data,
                          ffi.Size data_length,
                          ffi.Pointer<ffi.Void> userdata)>>,
              ffi.Pointer<ffi.Void>)>>('simpleble_peripheral_notify');
  late final _simpleble_peripheral_notify =
      _simpleble_peripheral_notifyPtr.asFunction<
          int Function(
              simpleble_peripheral_t,
              simpleble_uuid_t,
              simpleble_uuid_t,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Void Function(
                          simpleble_uuid_t service,
                          simpleble_uuid_t characteristic,
                          ffi.Pointer<ffi.Uint8> data,
                          ffi.Size data_length,
                          ffi.Pointer<ffi.Void> userdata)>>,
              ffi.Pointer<ffi.Void>)>();

  /// @brief
  ///
  /// @param handle
  /// @param service
  /// @param characteristic
  /// @param callback
  /// @return simpleble_err_t
  int simpleble_peripheral_indicate(
    simpleble_peripheral_t handle,
    simpleble_uuid_t service,
    simpleble_uuid_t characteristic,
    ffi.Pointer<
            ffi.NativeFunction<
                ffi.Void Function(
                    simpleble_uuid_t service,
                    simpleble_uuid_t characteristic,
                    ffi.Pointer<ffi.Uint8> data,
                    ffi.Size data_length,
                    ffi.Pointer<ffi.Void> userdata)>>
        callback,
    ffi.Pointer<ffi.Void> userdata,
  ) {
    return _simpleble_peripheral_indicate(
      handle,
      service,
      characteristic,
      callback,
      userdata,
    );
  }

  late final _simpleble_peripheral_indicatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              simpleble_peripheral_t,
              simpleble_uuid_t,
              simpleble_uuid_t,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Void Function(
                          simpleble_uuid_t service,
                          simpleble_uuid_t characteristic,
                          ffi.Pointer<ffi.Uint8> data,
                          ffi.Size data_length,
                          ffi.Pointer<ffi.Void> userdata)>>,
              ffi.Pointer<ffi.Void>)>>('simpleble_peripheral_indicate');
  late final _simpleble_peripheral_indicate =
      _simpleble_peripheral_indicatePtr.asFunction<
          int Function(
              simpleble_peripheral_t,
              simpleble_uuid_t,
              simpleble_uuid_t,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Void Function(
                          simpleble_uuid_t service,
                          simpleble_uuid_t characteristic,
                          ffi.Pointer<ffi.Uint8> data,
                          ffi.Size data_length,
                          ffi.Pointer<ffi.Void> userdata)>>,
              ffi.Pointer<ffi.Void>)>();

  /// @brief
  ///
  /// @param handle
  /// @param service
  /// @param characteristic
  /// @return simpleble_err_t
  int simpleble_peripheral_unsubscribe(
    simpleble_peripheral_t handle,
    simpleble_uuid_t service,
    simpleble_uuid_t characteristic,
  ) {
    return _simpleble_peripheral_unsubscribe(
      handle,
      service,
      characteristic,
    );
  }

  late final _simpleble_peripheral_unsubscribePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(simpleble_peripheral_t, simpleble_uuid_t,
              simpleble_uuid_t)>>('simpleble_peripheral_unsubscribe');
  late final _simpleble_peripheral_unsubscribe =
      _simpleble_peripheral_unsubscribePtr.asFunction<
          int Function(
              simpleble_peripheral_t, simpleble_uuid_t, simpleble_uuid_t)>();

  /// @brief
  ///
  /// @param handle
  /// @param service
  /// @param characteristic
  /// @param descriptor
  /// @param data
  /// @param data_length
  /// @return simpleble_err_t
  int simpleble_peripheral_read_descriptor(
    simpleble_peripheral_t handle,
    simpleble_uuid_t service,
    simpleble_uuid_t characteristic,
    simpleble_uuid_t descriptor,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> data,
    ffi.Pointer<ffi.Size> data_length,
  ) {
    return _simpleble_peripheral_read_descriptor(
      handle,
      service,
      characteristic,
      descriptor,
      data,
      data_length,
    );
  }
